--- a/_config.yml
+++ b/_config.yml
@@ -78,29 +78,31 @@ content:
     layout: list # Type of content section (list/text)
     content:
       - layout: left
-        title: The Boring Company
-        link: boringcompany.com
-        # link_text: boringcompany.com
+        title: Nuricon
+        link: nuricon.co.kr
+        # link_text: http://www.nuricon.co.kr/
         sub_title: Senior Network System Administrator
-        caption: November 2017 - Present
+        caption: November 2020 - Present
         quote: >
-          Solving 21st century problems by diging holes and making game changing products like the *not a flamethrower*
+          뛰어난 기술력을 바탕으로 IP Wall Controller 시장의 점유율 1위를 고수하며, AI Vision 분야의 혁신적인 주차 시스템을 제공
         description: | # this will include new lines to allow paragraphs
-            Every company needs its networks properly administered and The Boring Compay is no exception. Digging holes is hard and I play my part making sure the whole company stays connected. I lead a team of 5 people and enjoy driving the company to try new technologies.
+            IP Wall은 모든 매체의 영상을 별도의 장비 없이 Network나, 영상케이블로 입력받아 다양한 형태의 Display에 실시간으로 표출 가능합니다.
+            
+            Smart Parking은 AI 기술을 이용해 주차장에 설치된 CCTV 영상을 분석하여 운전자에게 실시간으로 정보를 제공함으로써 주차장 이용 가능 여부 및 정확한 주차 위치정보를 제공하는 시스템입니다.
 
   - title: Education # Title for the section
     layout: list # Type of content section (list/text)
     content:
       - layout: left
-        title: Harvard University
-        caption: 2010 - 2013
-        sub_title: BSc Computer Science
+        title: Sejong University Graduate School
+        caption: 2015 - 2019
+        sub_title: Computer Engineering
         quote: >
-          Established in 1636, Harvard is the oldest higher education institution in the United States, and is widely regarded in terms of its influence, reputation, and academic pedigree as a leading university in not just the US but also the world.
-        description: | # this will include new lines to allow paragraphs
-          During my time at Harvard I learnt most of my key skills that have I have taken through my career such as teamwork and working to tight deadlines. I thouroughly enjoyed my time as university and learnt a lot about a healthy work life balance.
-
-          I spent a lot of my free time as a committee member of the *Harvard Mountaineering Club* taking on roles such as *Trip Secretary* and *Vice-President*.
+          세종대학교에서 석박사 통합과정으로 학위를 받았으며, 대학원에서 병역특례인 전문연구요원으로 복무했습니다.
+        description: | 
+          대학원에서는 주로 ADD와 사이버전에 관한 기초 연구를 진행했습니다. 이외에도 하둡 에코시스템을 사용하여 보안로그를 수집 및 분석, 데이터 마이닝을 통한 사용자 행위 패턴 추출 및 예측, 로그 분석을 이용한 공격 탐지 어플리케이션 개발 등 다양한 방면으로 연구를 진행했습니다.
+          
+          특허로는 라이브 포렌식 기반 공격 탐지 장치 및 방법, 로그 분석을 이용한 공격 탐지 장치 및 방법 두 개를 가지고 있고, 로그 분석을 이용한 공격 탐지 장치 및 방법은 기술이전을 진행하였습니다.
 
   - title: A Little More About Me
     layout: text
@@ -112,7 +114,7 @@ content:
       - [Becoming a ninja](https://www.youtube.com/watch?v=vtg4o__aRMg)
 
       Look at this cool image  
-      ![Trees](/modern-resume-theme/images/landscape-trees.jpg "Trees")
+      ![Trees](/images/landscape-trees.jpg "Trees")
 
 # Footer
 footer_show_references: true
