--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ content:
         title: Nuricon
         link: nuricon.co.kr
         # link_text: http://www.nuricon.co.kr/
-        sub_title: Senior Network System Administrator
+        sub_title: Developer
         caption: November 2020 - Present
         quote: >
           뛰어난 기술력을 바탕으로 IP Wall Controller 시장의 점유율 1위를 고수하며, AI Vision 분야의 혁신적인 주차 시스템을 제공
