--- a/_config.yml
+++ b/_config.yml
@@ -74,7 +74,7 @@ content:
         description: | # this will include new lines to allow paragraphs
           I started this project as a way if learning <mark>React</mark> and it has since grown into a fully fledged app. I have learned many skills through this and been I'm very proud of having this in my portfolio. If you don't have a project as awesome as this I would advise you make one.
 
-  - title: Project # Title for the section
+  - title: Projects # Title for the section
     layout: list # Type of content section (list/text)
     content:
       - layout: left
@@ -89,6 +89,7 @@ content:
           정확한 모델 비교를 위해 데이터를 수집해야 하는데, 다수의 주민등록증을 구하기에 어려움이 있어 generator를 개발하여 틀어진 각도나, 사이즈, 위치 등을 랜덤하게 하여 신분증 데이터를 생성하는 작업 진행
           
           학습한 모델을 안드로이드에서 사용가능하게 변환하여 카메라를 사용한 안드로이드 어플리케이션으로 제작
+          
     content:
       - layout: left
         title: test
