--- a/_config.yml
+++ b/_config.yml
@@ -83,12 +83,12 @@ content:
         quote: >
           신분증을 인식하여 신분증 내에 있는 텍스트들을 추출하여 OCR로 인식하는 프로그램
         description: | 
-          주민등록증의 텍스트를 인식하기위해 Detection model들을 조사하여 어떤 모델이 적합한지 테스트 진행 (YOLO, EAST 등)
-          학습 데이터가 적어서 주민등록증이 틀어지거나 크기가 크면 인식이 되지 않음
+          주민등록증의 텍스트를 인식하기위해 Detection model들을 조사하여 어떤 모델이 적합한지 테스트 진행 하였습니다.(YOLO, EAST 등)
           
-          정확한 모델 비교를 위해 데이터를 수집해야 하는데, 다수의 주민등록증을 구하기에 어려움이 있어 generator를 개발하여 틀어진 각도나, 사이즈, 위치 등을 랜덤하게 하여 신분증 데이터를 생성하는 작업 진행
+          학습 데이터가 적어서 주민등록증이 틀어지거나 크기가 크면 인식률이 떨어지게 되어 새로운 방안을 찾아야 했습니다.
+          다수의 주민등록증을 구하기에 어려움이 있어 Python으로 generator를 개발하여 틀어진 각도나, 사이즈, 위치 등을 랜덤하게 하여 신분증 데이터를 생성하는 작업을 진행하였습니다.
           
-          학습한 모델을 안드로이드에서 사용가능하게 변환하여 카메라를 사용한 안드로이드 어플리케이션으로 제작
+          generator로 생성한 데이터를 학습시키고 안드로이드에서 사용가능하게 tflite로 변환하여 카메라를 사용한 안드로이드 어플리케이션으로 제작하였습니다.
           
       - layout: left
         title: test
@@ -122,11 +122,13 @@ content:
         caption: 2015 - 2019
         sub_title: Computer Engineering
         quote: >
-          세종대학교에서 석박사 통합과정으로 학위를 받았으며, 대학원에서 병역특례인 전문연구요원으로 복무했습니다.
+          다양한 연구 경험 및 리더십 향상
         description: | 
           대학원에서는 주로 ADD와 사이버전에 관한 기초 연구를 진행했습니다. 이외에도 하둡 에코시스템을 사용하여 보안로그를 수집 및 분석, 데이터 마이닝을 통한 사용자 행위 패턴 추출 및 예측, 로그 분석을 이용한 공격 탐지 어플리케이션 개발 등 다양한 방면으로 연구를 진행했습니다.
           
           특허로는 라이브 포렌식 기반 공격 탐지 장치 및 방법, 로그 분석을 이용한 공격 탐지 장치 및 방법 두 개를 가지고 있고, 로그 분석을 이용한 공격 탐지 장치 및 방법은 기술이전을 진행하였습니다.
+          
+          랩실의 장을 맡아서 전반적인 업무를 분석하고 구성원 개개인이 어떤 일을 잘하는지 파악하여 적재적소에 배치하는 역할을 하였습니다. 그러면서 자연스럽게 팀원간의 조율할 수 있는 능력과 이끌수 있는 리더십을 터득했습니다.
 
   - title: A Little More About Me
     layout: text
