--- a/_config.yml
+++ b/_config.yml
@@ -91,13 +91,34 @@ content:
           generator로 생성한 데이터를 학습시키고 안드로이드에서 사용가능하게 tflite로 변환하여 카메라를 사용한 안드로이드 어플리케이션으로 제작하였습니다.
           
       - layout: left
+        title: viewflex에서 사용하는 영상표출 플레이어 구현
+        caption: 2020.5 - 2020.8
+        quote: >
+          장보고 잠수함 훈련장에 사용할 multicast 영상을 받아서 표출하는 플레이어 구현
+        description: | 
+          멀티캐스트 36개의 영상을 받아서 표출하는 플레이어를 C#으로 구현하였습니다. 다른 회사와 헤더를 규약하고 데이터가 들어오면 영상인지 소리인지 구분하여 영상만 표출하는 부분을 구현하고, 소리는 별도로 버튼을 이용하여 On/Off 가능하게 구현하였습니다.
+          
+          이 당시에 영상이 2/3만 표출되는 현상이 생겼었습니다. 원인을 찾기위해 wireshark로 Raw 데이터를 열어서 정상적인 데이터가 들어오는지 확인하고, RTP 데이터를 분석해봤지만 이상이 없어서 문제점을 찾는데 시간이 오래 걸렸습니다.
+          
+          문제가 버퍼 사이즈 때문이었는데, c#에서 사용하는 기본 버퍼 사이즈가 8192바이트로 되어 있기 때문에 한 프레임이 버퍼 안에 들어오지 못한 데이터가 생기면 소실되어버려 영상이 잘려서 재생이 된 것입니다. 단 한 줄 수정해주니 정상적으로 영상이 표출되는 것을 보고 좋았지만 한편으로는 언어의 이해도가 중요하다는 걸 깨달았습니다.
+          
+      - layout: left
         title: test
         caption: test
         quote: >
           test
         description: | 
           test
-
+          
+      - layout: left
+        title: test
+        caption: test
+        quote: >
+          test
+        description: | 
+          test
+          
+          
   - title: Experience # Title for the section
     layout: list # Type of content section (list/text)
     content:
@@ -146,19 +167,32 @@ content:
     layout: text
     content: | # this will include new lines to allow paragraphs
       journal
-      - Kim, D., Shin, D., Shin, D., & Kim, Y. H. (2019). Attack detection application with attack tree for mobile system using log analysis. Mobile Networks and Applications, 24, 184-192.
-      - Kim, D., Kim, Y. H., Shin, D., & Shin, D. (2019). Fast attack detection system using log analysis and attack tree generation. Cluster Computing, 22, 1827-1835.
-      - Park, J., Kim, D., Shin, D., & Shin, D. (2019). Design and implementation of simulation tool for cyber battle damage assessment using MOCE (measure of cyber effectiveness). Journal of the Korea Institute of Information Security & Cryptology, 29(2), 465-472.
+      - (2019). Attack detection application with attack tree for mobile system using log analysis. Mobile Networks and Applications, 24, 184-192.
+      - (2019). Fast attack detection system using log analysis and attack tree generation. Cluster Computing, 22, 1827-1835.
+      - (2019). Design and implementation of simulation tool for cyber battle damage assessment using MOCE (measure of cyber effectiveness). Journal of the Korea Institute of Information Security & Cryptology, 29(2), 465-472.
       
       International Conference
-      - Kim, D., Kim, Y., Kim, D., Shin, D., & Shin, D. (2017). Attack Tree Generation and Real-Time Attack Detection System Using Log Analysis. In Proceedings of the Korea Information Processing Society Conference (pp. 207-210). Korea Information Processing Society.
-      - Kim, D., Kim, Y., Kim, D., Shin, D., & Shin, D. (2017). Cyber Battle damage assessment framework. In Proceedings of the Korea Information Processing Society Conference (pp. 178-181). Korea Information Processing Society.
-      - Kim, D., Kim, D., Shin, D., Shin, D., & Kim, Y. H. (2019). Cyber battle damage assessment framework and detection of unauthorized wireless access point using machine learning. In Frontier Computing: Theory, Technologies and Applications (FC 2018) 7 (pp. 510-519). Springer Singapore.
-      - Kim, D., Lee, D., Shin, D., & Shin, D. (2019). A Method of Finger Counting by Fingertips Recognition. The International Conference on Big data, IoT, and Cloud Computing (BIC-19)
-      - Kim, D., Shin, D., Shin, D., & Shin, D. (2019). Development of Real-time Human Depression Diagnosis System by Analyzing Brainwaves. The International Conference on Big data, IoT, and Cloud Computing (BIC-19)
-      - Kim, D., Kim, D., Shin, D., & Shin, D. (2019). Unauthorized AP Detection System Based on Machine Learning. The International Conference on Big data, IoT, and Cloud Computing (BIC-19)
+      - (2017). Attack Tree Generation and Real-Time Attack Detection System Using Log Analysis. In Proceedings of the Korea Information Processing Society Conference (pp. 207-210). Korea Information Processing Society.
+      - (2017). Cyber Battle damage assessment framework. In Proceedings of the Korea Information Processing Society Conference (pp. 178-181). Korea Information Processing Society.
+      - (2019). Cyber battle damage assessment framework and detection of unauthorized wireless access point using machine learning. In Frontier Computing: Theory, Technologies and Applications (FC 2018) 7 (pp. 510-519). Springer Singapore.
+      - (2019). A Method of Finger Counting by Fingertips Recognition. The International Conference on Big data, IoT, and Cloud Computing (BIC-19)
+      - (2019). Development of Real-time Human Depression Diagnosis System by Analyzing Brainwaves. The International Conference on Big data, IoT, and Cloud Computing (BIC-19)
+      - (2019). Unauthorized AP Detection System Based on Machine Learning. The International Conference on Big data, IoT, and Cloud Computing (BIC-19)
       
-      National Conference
+      국내 컨퍼런스
+      - (2015). 그래프 마이닝을 이용한 사용자 행위 패턴 추출 및 예측. 한국통신학회 학술대회논문집, 86-87.
+      - (2015). 네트워크중심 작전환경 구성을 위한 행위 패턴 예측. 한국인터넷정보학회 학술발표대회 논문집, 23-24.
+      - (2015). 그래프 마이닝을 이용한 사용자의 행동 패턴 예측 및 상황인식. 한국정보과학회 학술발표논문집, 409-411.
+      - (2015). 하둡 에코 시스템을 이용한 보안 로그 수집 및 분석. 한국정보처리학회 학술대회논문집, 22(2), 194-196.
+      - (2016). 빅 데이터 시스템을 이용한 보안 로그 수집 및 분석 시스템 설계. 한국정보처리학회 학술대회논문집, 23(1), 321-323.
+      - (2016). 빅 데이터 로그 관리 분석 시스템을 이용한 공격탐지 시스템. 한국통신학회 학술대회논문집, 121-122.
+      - (2016). 사용자 행위 인지 및 예측을 위한 모델링과 라이프로그 빅데이터 시스템. 한국통신학회 학술대회논문집, 231-232.
+      - (2016). 공격 트리 시나리오의 생성 및 분석을 이용한 침입 경로 예측 시스템. 한국인터넷정보학회 학술발표대회 논문집, 17(2), 13-14.
+      - (2017). 로그 분석을 이용한 공격 트리 생성과 실시간공격 탐지 시스템. 한국정보처리학회 학술대회논문집, 24(1), 207-210.
+      - (2017). 사이버 전투 피해 평가 프레임워크. 한국정보처리학회 학술대회논문집, 24(2), 178-181.
+      - (2018). 사이버 전투 피해 평가 구조도 및 기계학습을 이용한 비인가 무선 AP 탐지 실험. 한국통신학회 학술대회논문집, 374-375.
+
+
 
   - title: A Little More About Me
     layout: text
