--- a/_config.yml
+++ b/_config.yml
@@ -83,6 +83,7 @@ content:
         quote: >
           신분증을 인식하여 신분증 내에 있는 텍스트들을 추출하여 OCR로 인식하는 프로그램
         description: | 
+          신사업팀으로 입사 후 맨 처음 제가 맡은 작업은 AI모델들의 성능을 조사하는 것이었습니다.
           주민등록증의 텍스트를 인식하기위해 Detection model들을 조사하여 어떤 모델이 적합한지 테스트 진행 하였습니다.(YOLO, EAST 등)
           
           학습 데이터가 적어서 주민등록증이 틀어지거나 크기가 크면 인식률이 떨어지게 되어 새로운 방안을 찾아야 했습니다.
@@ -92,10 +93,11 @@ content:
           
       - layout: left
         title: viewflex에서 사용하는 영상표출 플레이어 구현
-        caption: 2020.5 - 2020.8
+        caption: 2020.6 - 2020.9
         quote: >
           장보고 잠수함 훈련장에 사용할 multicast 영상을 받아서 표출하는 플레이어 구현
         description: | 
+          병역특례로 훈련소를 다녀오니 조직도가 변경되어 있어 다른팀에서 일해볼 기회가 생겼습니다.
           멀티캐스트 36개의 영상을 받아서 표출하는 플레이어를 C#으로 구현하였습니다. 다른 회사와 헤더를 규약하고 데이터가 들어오면 영상인지 소리인지 구분하여 영상만 표출하는 부분을 구현하고, 소리는 별도로 버튼을 이용하여 On/Off 가능하게 구현하였습니다.
           
           이 당시에 영상이 2/3만 표출되는 현상이 생겼었습니다. 원인을 찾기위해 wireshark로 Raw 데이터를 열어서 정상적인 데이터가 들어오는지 확인하고, RTP 데이터를 분석해봤지만 이상이 없어서 문제점을 찾는데 시간이 오래 걸렸습니다.
@@ -103,22 +105,75 @@ content:
           문제가 버퍼 사이즈 때문이었는데, c#에서 사용하는 기본 버퍼 사이즈가 8192바이트로 되어 있기 때문에 한 프레임이 버퍼 안에 들어오지 못한 데이터가 생기면 소실되어버려 영상이 잘려서 재생이 된 것입니다. 단 한 줄 수정해주니 정상적으로 영상이 표출되는 것을 보고 좋았지만 한편으로는 언어의 이해도가 중요하다는 걸 깨달았습니다.
           
       - layout: left
-        title: test
-        caption: test
+        title: viewflex 리팩토링
+        caption: 2020.10 - 2021.8
         quote: >
-          test
+          구조적 한계 극복을 위한 코드 리팩토링
         description: | 
-          test
+          기존의 돌아가는 프로그램을 유지보수 하면서, 유지보수 외 시간에는 현재의 프로그램을 재설계하여 구현하는 작업을 진행했습니다. 기능은 기존버젼 그대로 가져오되, 구조는 확장성을 더 고려하여 추가적인 기능이나 요구사항에 대처를 빠르게 할 수 있는 코드를 만드는 작업이었습니다.
+          
+          새로 추가하고 싶은 기능이 모니터 간에 동기를 맞추어 동일한 영상을 표출하는 것인데, 기존에 만들어진 코드의 구조적인 한계로 부득이하게 리팩토링을 진행하게 되었습니다.
+          기존에는 영상을 받아서 프로그램의 통제 없이 영상을 바로 표출하여 여러 개의 그래픽카드를 사용하는 경우 서로간의 동기가 맞지 않아 배젤이 없는 LED에서 눈에 띄게 티어링 현상이 생겼습니다. 이를 극복하기 위해 영상을 그래픽 카드에 내보내는 시점까지 프로그램이 통제하게 하여 동시에 표출이 가능하게 만드는 작업을 메인으로 진행했습니다. 
+          
+          그 외에도 기존 프로그램이 10년동안 유지되다 보니, 기능적으로 버리기도 하고 다시 구현해야 할 것이 많아서 설계나 리팩토링을 할 기회가 많았습니다.
           
       - layout: left
-        title: test
-        caption: test
+        title: 삼성 SDI 불량 배터리 검출 프로그램
+        caption: 2021.9 - 2021.12
         quote: >
-          test
+          AI 객체인식을 이용하여 불량 배터리를 검출하고 움직이는 사물의 qr코드를 인식하는 프로그램 개발
         description: | 
-          test
+          그때는 아직 신사업팀의 정확한 제품 컨셉이 정해지지 않아 수요가 있는데로 간단하게 AI를 사용한 프로그램을 만들어서 데모를 보여주고 프로젝트를 진행하는 상황이었습니다. 이런 저런 수요들이 생기고 프로그램을 빠르고 직관적으로 개발해야 할일이 많이 생겼습니다.
+          그러다보니 신사업팀의 개발 수요가 많이 생겨 기존에 제가 신사업팀에서 일해본 경험이 있기 때문에 지원요청을 받고 다시 팀을 옮겼습니다. 
           
+          신사업팀으로 돌아와서 처음 개발하게 된 것은 삼성 SDI에서 움직이는 로봇에 실려있는 배터리를 촬영해서 불량을 검토하고 QR코드를 인식하여 엔지니어에게 전달해주는 프로그램이었습니다.
+          삼성 SDS에서 사업 제안을 위해 데모영상을 부탁했고, 저는 폐 건전지로 상황을 모사해 직접 학습을 시키고 간단한 인퍼런스 프로그램을 제작하여 데모 영상을 전달했습니다. 
           
+      - layout: left
+        title: 옥외 주차 관제 시스템
+        caption: 2022.1 - 2022.5
+        quote: >
+          AI 객체인식을 이용하여 불량 배터리를 검출하고 움직이는 사물의 qr코드를 인식하는 프로그램 개발
+        description: | 
+          그때는 아직 신사업팀의 정확한 제품 컨셉이 정해지지 않아 수요가 있는데로 간단하게 AI를 사용한 프로그램을 만들어서 데모를 보여주고 프로젝트를 진행하는 상황이었습니다. 이런 저런 수요들이 생기고 프로그램을 빠르고 직관적으로 개발해야 할일이 많이 생겼습니다.
+          그러다보니 신사업팀의 개발 수요가 많이 생겨 기존에 제가 신사업팀에서 일해본 경험이 있기 때문에 지원요청을 받고 다시 팀을 옮겼습니다. 
+          
+          신사업팀으로 돌아와서 처음 개발하게 된 것은 삼성 SDI에서 움직이는 로봇에 실려있는 배터리를 촬영해서 불량을 검토하고 QR코드를 인식하여 엔지니어에게 전달해주는 프로그램이었습니다.
+          삼성 SDS에서 사업 제안을 위해 데모영상을 부탁했고, 저는 폐 건전지로 상황을 모사해 직접 학습을 시키고 간단한 인퍼런스 프로그램을 제작하여 데모 영상을 전달했습니다. 
+        
+      - layout: left
+        title: 고속도로 돌방정지 및 교통상황 시각화
+        caption: 2022.6 - 2022.8
+        quote: >
+          객체인식으로 고속도로에서 사고로 정지되어 있는 차량 감지와, 현재 교통량을 파악하여 도로에 색상을 표시하는 시각화 프로그램 개발
+        description: | 
+          to do
+          
+      - layout: left
+        title: 부설 주차 시스템
+        caption: 2022.9 - 2022.11
+        quote: >
+          건물이나, 노외에 있는 주차장인데, 기존의 옥외주차 시스템에서 차번호 인식을 추가하여 어떤 차량이 어느 주차 슬롯에 주차했는지 판단하는 프로그램 개발
+        description: | 
+          to do
+      
+      - layout: left
+        title: 실내 주차 시스템
+        caption: 2022.12 - 2023.2
+        quote: >
+          마트나 백화점, 아파트 같은 실내 주차장에서 만공차를 판단하고, 실내 네비게이션을 제공하고, 사용자의 차량 주차위치를 제공해주는 프로그램 개발
+        description: | 
+          to do
+       
+      - layout: left
+        title: 주차 통합 시스템
+        caption: 2023.3 - 진행
+        quote: >
+          옥외주차, 부설주차, 실내주차를 통합하여 하나의 프로그램으로 개발
+        description: | 
+          to do
+          
+                    
   - title: Experience # Title for the section
     layout: list # Type of content section (list/text)
     content:
