--- a/_config.yml
+++ b/_config.yml
@@ -133,13 +133,9 @@ content:
         title: 옥외 주차 관제 시스템
         caption: 2022.1 - 2022.5
         quote: >
-          AI 객체인식을 이용하여 불량 배터리를 검출하고 움직이는 사물의 qr코드를 인식하는 프로그램 개발
+          휴게소나 졸음쉼터, 옥상 주차장 등 옥외에서 사용하는 만공차 프로그램
         description: | 
-          그때는 아직 신사업팀의 정확한 제품 컨셉이 정해지지 않아 수요가 있는데로 간단하게 AI를 사용한 프로그램을 만들어서 데모를 보여주고 프로젝트를 진행하는 상황이었습니다. 이런 저런 수요들이 생기고 프로그램을 빠르고 직관적으로 개발해야 할일이 많이 생겼습니다.
-          그러다보니 신사업팀의 개발 수요가 많이 생겨 기존에 제가 신사업팀에서 일해본 경험이 있기 때문에 지원요청을 받고 다시 팀을 옮겼습니다. 
-          
-          신사업팀으로 돌아와서 처음 개발하게 된 것은 삼성 SDI에서 움직이는 로봇에 실려있는 배터리를 촬영해서 불량을 검토하고 QR코드를 인식하여 엔지니어에게 전달해주는 프로그램이었습니다.
-          삼성 SDS에서 사업 제안을 위해 데모영상을 부탁했고, 저는 폐 건전지로 상황을 모사해 직접 학습을 시키고 간단한 인퍼런스 프로그램을 제작하여 데모 영상을 전달했습니다. 
+          to do
         
       - layout: left
         title: 고속도로 돌방정지 및 교통상황 시각화
