--- a/_config.yml
+++ b/_config.yml
@@ -116,15 +116,25 @@ content:
         quote: >
           휴게소나 졸음쉼터, 옥상 주차장 등 옥외에서 사용하는 만공차 프로그램
         description: | 
-          to do
+          그 당시에는 주차관련한 모듈이 여러개 만들어져 있었습니다. 하지만 전부 c++로 구현되어 있어 업데이트나 유지보수를 하려면 개발자가 코드를 봐야하고, 코드의 양이 적지 않다보니 새로운 사람이 접했을 때 쉽게 수정하기 힘든 단점이 생겼습니다.
+          
+          이에 no code를 사용해 보기로 했었고, 서비스 관련한 모듈들은 전부 기술스택을 변경하기로 의사결정 했습니다. no code로 변경하기 위해 통신을 mqtt에서 kafka로 변경하고 c++로 하던 데이터 처리를 ksql을 사용하여 진행하기로 했습니다.
+          하지만 ksql은 쿼리문이기 때문에 기존에 c++에서 하는일을 대체하기에는 어려움이 있었고, 다른 기술을 찾아봐야 했습니다. 그러던 와중에 node-red라는 UI기반 tool을 알게 되었고 데이터의 흐름이나 처리를 쉽게 진행할 수 있었습니다.
+          
+          그래서 원래는 c++에서 하던 서비스들을 javascript로 컨버팅하는 작업을 주로 했고, 그러다 보니 전반적인 내용을 다 알게되어 추후에 다른 주차 모듈의 통합작업을 진행하게 되었습니다.
+          
         
       - layout: left
-        title: 고속도로 돌방정지 및 교통상황 시각화
+        title: 고속도로 돌발정지 및 교통상황 시각화
         caption: 2022.6 - 2022.8
         quote: >
           객체인식으로 고속도로에서 사고로 정지되어 있는 차량 감지와, 현재 교통량을 파악하여 도로에 색상을 표시하는 시각화 프로그램 개발
         description: | 
-          to do
+          옥외 주차를 마무리하고 도로교통공사에서 AI로 돌발정지(사고나, 차량고장 등) 되어있는 차량을 인지 할 수 있냐는 문의가 들어왔습니다. 이 때도 데모를 만들기 위해 차량의 bounding box를 이용하여 속도를 구해서, 급감속 하는 차량을 탐지하는 프로그램을 만들었습니다.
+          단순히 속도만 측정하는 것은 별로 보여줄 것이 없어서, 차량의 속도를 이용해서 현재 도로의 교통량을 시각화하는 내용까지 개발했습니다.
+          
+          일반 카메라에서 차량의 속도를 탐지하려다 보니, 수식이 많이 들어가고 카메라의 왜곡율에 따라 식이 다르게 적용되어야 하며, 실제 설치 높이나 도로와의 거리 등 다양한 인수가 필요하여 손이 많이 갔습니다. 또한 오차 범위가 너무 넓어서 정확한 속도를 구하기가 힘들었습니다.
+          이에 다른 알고리즘을 적용해야겠다 생각하여 영상 전체를 작은 cell로 만들어서 차량의 bounding box와 맵핑되는 cell들 색을 실시간으로 변경해 주었습니다. 차량이 없으면 초록색이다가, 오래 머무른곳은 빨개지고 지나가는 곳은 노랗게 변하는 시각화 프로그램을 개발하였습니다.
           
       - layout: left
         title: 부설 주차 시스템
@@ -132,7 +142,9 @@ content:
         quote: >
           건물이나, 노외에 있는 주차장인데, 기존의 옥외주차 시스템에서 차번호 인식을 추가하여 어떤 차량이 어느 주차 슬롯에 주차했는지 판단하는 프로그램 개발
         description: | 
-          to do
+          실질적인 수요가 생겨 건물에 있는 부설 주차장에 만공차를 판단하는 시스템을 설치했는데, 기존의 옥외주차에서 사용하던 로직을 그대로 적용하면 정상적으로 만공차를 판단하지 못했습니다. 그리고 주차 정산 시스템과 연동하기 위해 추가적으로 번호판을 사용해아 하는 상황이었습니다. 
+          
+          옥외에는 아주 높이서 찍다보니 번호판이 보이지 않아서 고려하지 않았는데 부설주차장에서는 번호가 정확이 인식되기 때문에 각 주차 칸에 어떤 번호판의차가 주차했는지 알 수가 있었습니다. 이에 대한 새로운 로직을 개발하여 부설 주차장에도 설치가 가능해졌습니다. 
       
       - layout: left
         title: 실내 주차 시스템
@@ -140,15 +152,20 @@ content:
         quote: >
           마트나 백화점, 아파트 같은 실내 주차장에서 만공차를 판단하고, 실내 네비게이션을 제공하고, 사용자의 차량 주차위치를 제공해주는 프로그램 개발
         description: | 
-          to do
-       
+          옥외 주차를 개발하고 난 당시에 실내주차장은 당연히 옥외 주차와 많이 다를 것이라 판단하여 별도로 개발이 진행되고 있었습니다. 하지만 기존의 옥외와 부설과 전혀 다르게 진행되고 기능도 훨씬 많아서 중간에 참여하여 여러 팀원들과 작업을 같이 진행하였습니다.
+          
+          여러 기능들 중에 저는 전광판에 네비게이션을 해주는 기능을 주로 맡아서 개발했는데, 현재 차량의 위치를 도면상에서 파악하고 LED가 보이는 위치에 오면 목적지 까지 길안내를 해주는 기능이었습니다. 단순 A*를 사용하여 구현했지만 안내 대상이 차량이라서 후진을 제외하고 안내를 해야 했습니다.
+          그래서 안내하는 전광판에 따라 도면을 수정하여 길찾기 알고리즘을 적용하여 원하는 결과를 얻어낼 수 있었습니다.
+          
+          이외에도 차량이 주차가 완료되었다고 판단하면 캡처하는 기능, 내차 찾기 기능등 여러 기능들을 구현했습니다.
+          
       - layout: left
         title: 주차 통합 시스템
         caption: 2023.3 - 진행
         quote: >
           옥외주차, 부설주차, 실내주차를 통합하여 하나의 프로그램으로 개발
         description: | 
-          to do
+          여러가지의 주차 시스템들이 나왔는데, 각자 별도로 개발되어 엔지니어가 설치나 유지보수를 하기 위해선 엄청난 양의 정보를 알고있어야 했습니다. 이에 모든 시스템들을 통합하고 하나의 프로그램으로 만드는 작업을 진행중입니다.
           
                     
   - title: Experience # Title for the section
