--- a/_config.yml
+++ b/_config.yml
@@ -50,9 +50,9 @@ about_profile_image: images/profile.jpg
 about_content: | # this will include new lines to allow paragraphs
   <mark>c++</mark>, <mark>c#</mark>, <mark>javascript</mark>, <mark>python</mark>, <mark>java</mark>, <mark>nodejs</mark>, <mark>vue</mark> 등 다양한 언어 및 플랫폼을 취급하고 있으며, 특정 언어가 주력이 아닌 목적에 필요한 언어를 언제든지 가져다 사용할 수 있는 것을 목표로 하고 있습니다.
   
-  목표한 방향으로 프로그램이 돌아가는것을 체크 하기 위해 디버깅 환경 구성하는 것을 중요하게 생각하고 있으며, 예외 상황이 생겼을때 재현하는 환경 등을 주로 만들어서 사용한 경험이 다수 있습니다.
+  목표한 방향으로 프로그램이 돌아가는 것을 체크 하기 위해 디버깅 환경 구성하는 것을 중요하게 생각하고 있으며, 예외 상황이 생겼을 때 재현하는 환경 등을 주로 만들어서 사용한 경험이 다수 있습니다.
   
-  빌드 자동화에도 관심을 갖고 <mark>docker</mark>, <mark>jenkins</mark>를  지속적으로 관찰 중 입니다.
+  빌드 자동화에도 관심을 갖고 <mark>docker</mark>, <mark>jenkins</mark>를  지속적으로 관찰 중입니다.
 
 content:
   - title: Projects # Title for the section
@@ -64,13 +64,13 @@ content:
         quote: >
           신분증을 인식하여 신분증 내에 있는 텍스트들을 추출하여 OCR로 인식하는 프로그램
         description: | 
-          신사업팀으로 입사 후 맨 처음 제가 맡은 작업은 AI모델들의 성능을 조사하는 것이었습니다.
-          주민등록증의 텍스트를 인식하기위해 Detection model들을 조사하여 어떤 모델이 적합한지 테스트 진행 하였습니다.(YOLO, EAST 등)
-          
+          신사업 팀으로 입사 후 맨 처음 제가 맡은 작업은 AI 모델들의 성능을 조사하는 것이었습니다.
+          주민등록증의 텍스트를 인식하기 위해 Detection model 들을 조사하여 어떤 모델이 적합한지 테스트 진행하였습니다.(YOLO, EAST 등)
+
           학습 데이터가 적어서 주민등록증이 틀어지거나 크기가 크면 인식률이 떨어지게 되어 새로운 방안을 찾아야 했습니다.
-          다수의 주민등록증을 구하기에 어려움이 있어 Python으로 generator를 개발하여 틀어진 각도나, 사이즈, 위치 등을 랜덤하게 하여 신분증 데이터를 생성하는 작업을 진행하였습니다.
-          
-          generator로 생성한 데이터를 학습시키고 안드로이드에서 사용가능하게 tflite로 변환하여 카메라를 사용한 안드로이드 어플리케이션으로 제작하였습니다.
+          다수의 주민등록증을 구하기에 어려움이 있어 Python으로 generator를 개발하여 틀어진 각도나, 크기, 위치 등을 랜덤하게 하여 신분증 데이터를 생성하는 작업을 진행하였습니다.
+
+          generator로 생성한 데이터를 학습시키고 안드로이드에서 사용 가능하게 tflite로 변환하여 카메라를 사용한 안드로이드 어플리케이션으로 제작하였습니다.
           
       - layout: left
         title: viewflex에서 사용하는 영상표출 플레이어 구현
@@ -78,12 +78,12 @@ content:
         quote: >
           장보고 잠수함 훈련장에 사용할 multicast 영상을 받아서 표출하는 플레이어 구현
         description: | 
-          병역특례로 훈련소를 다녀오니 조직도가 변경되어 있어 다른팀에서 일해볼 기회가 생겼습니다.
+          병역특례로 훈련소를 다녀오니 조직도가 변경되어 있어 다른 팀에서 일해볼 기회가 생겼습니다.
           멀티캐스트 36개의 영상을 받아서 표출하는 플레이어를 C#으로 구현하였습니다. 다른 회사와 헤더를 규약하고 데이터가 들어오면 영상인지 소리인지 구분하여 영상만 표출하는 부분을 구현하고, 소리는 별도로 버튼을 이용하여 On/Off 가능하게 구현하였습니다.
+
+          이 당시에 영상이 2/3만 표출되는 현상이 생겼었습니다. 원인을 찾기 위해 wireshark로 Raw 데이터를 열어서 정상적인 데이터가 들어오는지 확인하고, RTP 데이터를 분석해봤지만, 이상이 없어서 문제점을 찾는 데 시간이 오래 걸렸습니다.
           
-          이 당시에 영상이 2/3만 표출되는 현상이 생겼었습니다. 원인을 찾기위해 wireshark로 Raw 데이터를 열어서 정상적인 데이터가 들어오는지 확인하고, RTP 데이터를 분석해봤지만 이상이 없어서 문제점을 찾는데 시간이 오래 걸렸습니다.
-          
-          문제가 버퍼 사이즈 때문이었는데, c#에서 사용하는 기본 버퍼 사이즈가 8192바이트로 되어 있기 때문에 한 프레임이 버퍼 안에 들어오지 못한 데이터가 생기면 소실되어버려 영상이 잘려서 재생이 된 것입니다. 단 한 줄 수정해주니 정상적으로 영상이 표출되는 것을 보고 좋았지만 한편으로는 언어의 이해도가 중요하다는 걸 깨달았습니다.
+          문제가 버퍼 사이즈 때문이었는데, c#에서 사용하는 기본 버퍼 사이즈가 8192바이트로 되어 있어서 한 프레임이 버퍼 안에 들어오지 못한 데이터가 생기면 소실되어버려 영상이 잘려서 재생이 된 것입니다. 단 한 줄 수정해주니 정상적으로 영상이 표출되는 것을 보고 좋았지만, 한편으로는 언어의 이해도가 중요하다는 걸 깨달았습니다.
           
       - layout: left
         title: viewflex 리팩토링
@@ -91,24 +91,24 @@ content:
         quote: >
           구조적 한계 극복을 위한 코드 리팩토링
         description: | 
-          기존의 돌아가는 프로그램을 유지보수 하면서, 유지보수 외 시간에는 현재의 프로그램을 재설계하여 구현하는 작업을 진행했습니다. 기능은 기존버젼 그대로 가져오되, 구조는 확장성을 더 고려하여 추가적인 기능이나 요구사항에 대처를 빠르게 할 수 있는 코드를 만드는 작업이었습니다.
+          기존의 돌아가는 프로그램을 유지보수하면서, 유지보수 외 시간에는 현재의 프로그램을 재설계하여 구현하는 작업을 진행했습니다. 기능은 기존 버전 그대로 가져오되, 구조는 확장성을 더 고려하여 추가적인 기능이나 요구사항에 대처를 빠르게 할 수 있는 코드를 만드는 작업이었습니다.
           
           새로 추가하고 싶은 기능이 모니터 간에 동기를 맞추어 동일한 영상을 표출하는 것인데, 기존에 만들어진 코드의 구조적인 한계로 부득이하게 리팩토링을 진행하게 되었습니다.
-          기존에는 영상을 받아서 프로그램의 통제 없이 영상을 바로 표출하여 여러 개의 그래픽카드를 사용하는 경우 서로간의 동기가 맞지 않아 배젤이 없는 LED에서 눈에 띄게 티어링 현상이 생겼습니다. 이를 극복하기 위해 영상을 그래픽 카드에 내보내는 시점까지 프로그램이 통제하게 하여 동시에 표출이 가능하게 만드는 작업을 메인으로 진행했습니다. 
+          기존에는 영상을 받아서 프로그램의 통제 없이 영상을 바로 표출하여 여러 개의 그래픽카드를 사용하는 경우 서로 간의 동기가 맞지 않아 베젤이 없는 LED에서 눈에 띄게 티어링 현상이 생겼습니다. 이를 극복하기 위해 영상을 그래픽카드에 내보내는 시점까지 프로그램이 통제하게 하여 동시에 표출할 수 있게 만드는 작업을 핵심으로 진행했습니다.
           
-          그 외에도 기존 프로그램이 10년동안 유지되다 보니, 기능적으로 버리기도 하고 다시 구현해야 할 것이 많아서 설계나 리팩토링을 할 기회가 많았습니다.
+          그 외에도 기존 프로그램이 10년 동안 유지되다 보니, 기능적으로 버리기도 하고 다시 구현해야 할 것이 많아서 설계나 리팩토링할 기회가 많았습니다.
           
       - layout: left
         title: 삼성 SDI 불량 배터리 검출 프로그램
         caption: 2021.9 - 2021.12
         quote: >
-          AI 객체인식을 이용하여 불량 배터리를 검출하고 움직이는 사물의 qr코드를 인식하는 프로그램 개발
+          AI 객체 인식을 이용하여 불량 배터리를 검출하고 움직이는 사물의 qr코드를 인식하는 프로그램 개발
         description: | 
-          그때는 아직 신사업팀의 정확한 제품 컨셉이 정해지지 않아 수요가 있는데로 간단하게 AI를 사용한 프로그램을 만들어서 데모를 보여주고 프로젝트를 진행하는 상황이었습니다. 이런 저런 수요들이 생기고 프로그램을 빠르고 직관적으로 개발해야 할일이 많이 생겼습니다.
-          그러다보니 신사업팀의 개발 수요가 많이 생겨 기존에 제가 신사업팀에서 일해본 경험이 있기 때문에 지원요청을 받고 다시 팀을 옮겼습니다. 
+          그 당시에는 아직 신사업 팀의 정확한 제품 컨셉이 정해지지 않아 수요가 있는 데로 간단하게 AI를 사용한 프로그램을 만들어서 데모를 보여주고 프로젝트를 진행하는 상황이었습니다. 이런저런 수요들이 생기고 프로그램을 빠르고 직관적으로 개발해야 할 일이 많이 생겼습니다.
+          그러다 보니 신사업 팀의 개발 수요가 많이 생겨 기존에 제가 신사업 팀에서 일해본 경험이 있어서 지원요청을 받고 다시 팀을 옮겼습니다.
           
-          신사업팀으로 돌아와서 처음 개발하게 된 것은 삼성 SDI에서 움직이는 로봇에 실려있는 배터리를 촬영해서 불량을 검토하고 QR코드를 인식하여 엔지니어에게 전달해주는 프로그램이었습니다.
-          삼성 SDS에서 사업 제안을 위해 데모영상을 부탁했고, 저는 폐 건전지로 상황을 모사해 직접 학습을 시키고 간단한 인퍼런스 프로그램을 제작하여 데모 영상을 전달했습니다. 
+          신사업 팀으로 돌아와서 처음 개발하게 된 것은 삼성 SDI에서 움직이는 로봇에 실려있는 배터리를 촬영해서 불량을 검토하고 QR코드를 인식하여 엔지니어에게 전달해주는 프로그램이었습니다.
+          삼성 SDS에서 사업 제안을 위해 데모 영상을 부탁했고, 저는 폐건전지로 상황을 모사해 직접 학습시키고 간단한 인퍼런스 프로그램을 제작하여 데모 영상을 전달했습니다.
           
       - layout: left
         title: 옥외 주차 관제 시스템
@@ -116,12 +116,12 @@ content:
         quote: >
           휴게소나 졸음쉼터, 옥상 주차장 등 옥외에서 사용하는 만공차 프로그램
         description: | 
-          그 당시에는 주차관련한 모듈이 여러개 만들어져 있었습니다. 하지만 전부 c++로 구현되어 있어 업데이트나 유지보수를 하려면 개발자가 코드를 봐야하고, 코드의 양이 적지 않다보니 새로운 사람이 접했을 때 쉽게 수정하기 힘든 단점이 생겼습니다.
+          그 당시에는 주차 관련한 모듈이 여러 개 만들어져 있었습니다. 하지만 전부 c++로 구현되어 있어 업데이트나 유지보수를 하려면 개발자가 코드를 봐야 하고, 코드의 양이 적지 않다 보니 새로운 사람이 접했을 때 쉽게 수정하기 힘든 단점이 생겼습니다.
           
-          이에 no code를 사용해 보기로 했었고, 서비스 관련한 모듈들은 전부 기술스택을 변경하기로 의사결정 했습니다. no code로 변경하기 위해 통신을 mqtt에서 kafka로 변경하고 c++로 하던 데이터 처리를 ksql을 사용하여 진행하기로 했습니다.
-          하지만 ksql은 쿼리문이기 때문에 기존에 c++에서 하는일을 대체하기에는 어려움이 있었고, 다른 기술을 찾아봐야 했습니다. 그러던 와중에 node-red라는 UI기반 tool을 알게 되었고 데이터의 흐름이나 처리를 쉽게 진행할 수 있었습니다.
+          이에 no code를 사용해 보기로 했었고, 서비스 관련한 모듈들은 전부 기술 스택을 변경하기로 의사결정 했습니다. no code로 변경하기 위해 통신을 mqtt에서 kafka로 변경하고 c++로 하던 데이터 처리를 ksql을 사용하여 진행하기로 했습니다.
+          하지만 ksql은 쿼리문이기 때문에 기존에 c++에서 하는 일을 대체하기에는 어려움이 있었고, 다른 기술을 찾아봐야 했습니다. 그러던 와중에 node-red라는 UI 기반 tool을 알게 되었고 데이터의 흐름이나 처리를 쉽게 진행할 수 있었습니다.
           
-          그래서 원래는 c++에서 하던 서비스들을 javascript로 컨버팅하는 작업을 주로 했고, 그러다 보니 전반적인 내용을 다 알게되어 추후에 다른 주차 모듈의 통합작업을 진행하게 되었습니다.
+          그래서 원래는 c++에서 하던 서비스들을 javascript로 converting 작업을 주로 했고, 그러다 보니 전반적인 내용을 다 알게 되어 추후에 다른 주차 모듈의 통합작업을 진행하게 되었습니다.
           
         
       - layout: left
@@ -130,11 +130,11 @@ content:
         quote: >
           객체인식으로 고속도로에서 사고로 정지되어 있는 차량 감지와, 현재 교통량을 파악하여 도로에 색상을 표시하는 시각화 프로그램 개발
         description: | 
-          옥외 주차를 마무리하고 도로교통공사에서 AI로 돌발정지(사고나, 차량고장 등) 되어있는 차량을 인지 할 수 있냐는 문의가 들어왔습니다. 이 때도 데모를 만들기 위해 차량의 bounding box를 이용하여 속도를 구해서, 급감속 하는 차량을 탐지하는 프로그램을 만들었습니다.
+          옥외 주차를 마무리하고 도로교통공사에서 AI로 돌발정지(사고나, 차량고장 등) 되어있는 차량을 인지할 수 있냐는 문의가 들어왔습니다. 이때도 데모를 만들기 위해 차량의 bounding box를 이용하여 속도를 구해서, 급감속하는 차량을 탐지하는 프로그램을 만들었습니다.
           단순히 속도만 측정하는 것은 별로 보여줄 것이 없어서, 차량의 속도를 이용해서 현재 도로의 교통량을 시각화하는 내용까지 개발했습니다.
           
-          일반 카메라에서 차량의 속도를 탐지하려다 보니, 수식이 많이 들어가고 카메라의 왜곡율에 따라 식이 다르게 적용되어야 하며, 실제 설치 높이나 도로와의 거리 등 다양한 인수가 필요하여 손이 많이 갔습니다. 또한 오차 범위가 너무 넓어서 정확한 속도를 구하기가 힘들었습니다.
-          이에 다른 알고리즘을 적용해야겠다 생각하여 영상 전체를 작은 cell로 만들어서 차량의 bounding box와 맵핑되는 cell들 색을 실시간으로 변경해 주었습니다. 차량이 없으면 초록색이다가, 오래 머무른곳은 빨개지고 지나가는 곳은 노랗게 변하는 시각화 프로그램을 개발하였습니다.
+          일반 카메라에서 차량의 속도를 탐지하려다 보니, 수식이 많이 들어가고 카메라의 왜곡률에 따라 식이 다르게 적용되어야 하며, 실제 설치 높이나 도로와의 거리 등 다양한 인수가 필요하여 손이 많이 갔습니다. 또한 오차 범위가 너무 넓어서 정확한 속도를 구하기가 힘들었습니다.
+          이에 다른 알고리즘을 적용해야겠다 생각하여 영상 전체를 작은 cell로 만들어서 차량의 bounding box와 맵핑되는 cell들 색을 실시간으로 변경해 주었습니다. 차량이 없으면 초록색이다가, 오래 머무른 곳은 빨개지고 지나가는 곳은 노랗게 변하는 시각화 프로그램을 개발하였습니다.
           
       - layout: left
         title: 부설 주차 시스템
@@ -142,9 +142,9 @@ content:
         quote: >
           건물이나, 노외에 있는 주차장인데, 기존의 옥외주차 시스템에서 차번호 인식을 추가하여 어떤 차량이 어느 주차 슬롯에 주차했는지 판단하는 프로그램 개발
         description: | 
-          실질적인 수요가 생겨 건물에 있는 부설 주차장에 만공차를 판단하는 시스템을 설치했는데, 기존의 옥외주차에서 사용하던 로직을 그대로 적용하면 정상적으로 만공차를 판단하지 못했습니다. 그리고 주차 정산 시스템과 연동하기 위해 추가적으로 번호판을 사용해아 하는 상황이었습니다. 
+          실질적인 수요가 생겨 건물에 있는 부설 주차장에 만공차를 판단하는 시스템을 설치했는데, 기존의 옥외 주차에서 사용하던 로직을 그대로 적용하면 정상적으로 만공차를 판단하지 못했습니다. 그리고 주차 정산 시스템과 연동하기 위해 추가로 번호판을 사용해야 하는 상황이었습니다.
           
-          옥외에는 아주 높이서 찍다보니 번호판이 보이지 않아서 고려하지 않았는데 부설주차장에서는 번호가 정확이 인식되기 때문에 각 주차 칸에 어떤 번호판의차가 주차했는지 알 수가 있었습니다. 이에 대한 새로운 로직을 개발하여 부설 주차장에도 설치가 가능해졌습니다. 
+          옥외에는 아주 높이서 찍다 보니 번호판이 보이지 않아서 고려하지 않았는데 부설주차장에서는 번호가 정확히 인식되기 때문에 각 주차 칸에 어떤 번호판의 차가 주차했는지 알 수가 있었습니다. 이에 대한 새로운 로직을 개발하여 부설주차장에도 설치가 가능해졌습니다.
       
       - layout: left
         title: 실내 주차 시스템
@@ -152,12 +152,12 @@ content:
         quote: >
           마트나 백화점, 아파트 같은 실내 주차장에서 만공차를 판단하고, 실내 네비게이션을 제공하고, 사용자의 차량 주차위치를 제공해주는 프로그램 개발
         description: | 
-          옥외 주차를 개발하고 난 당시에 실내주차장은 당연히 옥외 주차와 많이 다를 것이라 판단하여 별도로 개발이 진행되고 있었습니다. 하지만 기존의 옥외와 부설과 전혀 다르게 진행되고 기능도 훨씬 많아서 중간에 참여하여 여러 팀원들과 작업을 같이 진행하였습니다.
+          옥외 주차를 개발하고 난 당시에 실내 주차장은 당연히 옥외 주차와 많이 다를 것으로 판단하여 별도로 개발이 진행되고 있었습니다. 하지만 기존의 옥외와 부설과 전혀 다르게 진행되고 기능도 훨씬 많아서 중간에 참여하여 여러 팀원과 작업을 같이 진행하였습니다.
           
-          여러 기능들 중에 저는 전광판에 네비게이션을 해주는 기능을 주로 맡아서 개발했는데, 현재 차량의 위치를 도면상에서 파악하고 LED가 보이는 위치에 오면 목적지 까지 길안내를 해주는 기능이었습니다. 단순 A*를 사용하여 구현했지만 안내 대상이 차량이라서 후진을 제외하고 안내를 해야 했습니다.
-          그래서 안내하는 전광판에 따라 도면을 수정하여 길찾기 알고리즘을 적용하여 원하는 결과를 얻어낼 수 있었습니다.
+          여러 기능 중에 저는 전광판에 네비게이션을 해주는 기능을 주로 맡아서 개발했는데, 현재 차량의 위치를 도면상에서 파악하고 LED가 보이는 위치에 오면 목적지까지 길 안내를 해주는 기능이었습니다. 단순 A* 알고리즘을 사용하여 구현했지만, 안내 대상이 차량이라서 후진을 제외하고 안내해야 했습니다.
+          그래서 안내하는 전광판에 따라 도면을 수정하여 길 찾기 알고리즘을 적용하여 원하는 결과를 얻어낼 수 있었습니다.
           
-          이외에도 차량이 주차가 완료되었다고 판단하면 캡처하는 기능, 내차 찾기 기능등 여러 기능들을 구현했습니다.
+          이외에도 차량이 주차가 완료되었다고 판단하면 캡처하는 기능, 내 차 찾기 기능 등 여러 기능들을 구현했습니다.
           
       - layout: left
         title: 주차 통합 시스템
@@ -165,7 +165,7 @@ content:
         quote: >
           옥외주차, 부설주차, 실내주차를 통합하여 하나의 프로그램으로 개발
         description: | 
-          여러가지의 주차 시스템들이 나왔는데, 각자 별도로 개발되어 엔지니어가 설치나 유지보수를 하기 위해선 엄청난 양의 정보를 알고있어야 했습니다. 이에 모든 시스템들을 통합하고 하나의 프로그램으로 만드는 작업을 진행중입니다.
+          여러 가지의 주차 시스템들이 나왔는데, 각자 별도로 개발되어 엔지니어가 설치나 유지보수를 하기 위해선 엄청난 양의 정보를 알고 있어야 했습니다. 이에 모든 시스템을 통합하고 하나의 프로그램으로 만드는 작업을 진행 중입니다.
           
                     
   - title: Experience # Title for the section
