--- a/_config.yml
+++ b/_config.yml
@@ -246,14 +246,14 @@ content:
   - title: A Little More About Me
     layout: text
     content: | # this will include new lines to allow paragraphs
-      Alongside my interests in networks and software engineering some of my other interests and hobbies are:
-      - Rock climbing
-      - Gaming
-      - Knitting
-      - [Becoming a ninja](https://www.youtube.com/watch?v=vtg4o__aRMg)
+      최근 읽고 있는 책
+      - 클린코드
+      # - Gaming
+      # - Knitting
+      # - [Becoming a ninja](https://www.youtube.com/watch?v=vtg4o__aRMg)
 
-      Look at this cool image  
-      ![Trees](/images/landscape-trees.jpg "Trees")
+      # Look at this cool image  
+      # ![Trees](/images/landscape-trees.jpg "Trees")
      
      
 
